app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap');

/* ______________________________________ FONTS
font-family: 'Alegreya Sans', sans-serif;
*/

/* ______________________________________ COLOR THEMES
default text
636363

functional -> red 
Ef4b4c 
hover
f66161
active
f89292
extra-light
f99494

outline -> gray
cccccc

soft-shadow -> gray
eaeaea

normal button -> white to gray
ffffff
hover
f1f1f1
click
f5f5f5

light -> almost white
fbfbfb
*/

/*______________________________________ PRIMITIVE STYLES */
* {
  /* outline: dashed red; */
  font-family: 'Alegreya Sans', sans-serif;
  box-sizing: inherit;
  color: #636363;
}

html,
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: #fbfbfb;
}

h2 {
  margin: 4px 0 0 0;
  color: #ef4b4c;
}

h3 {
  margin: 0 0 16px 0;
}

h4 {
  margin: 0;
  text-align: center;
}

h5 {
  text-align: center;
  margin: 16px 8px 8px 8px;
  color: #ef4b4c;
}

p {
  margin: 0;
}

a {
  color: rgb(0, 110, 255);
}

/*______________________________________ HIGH-LEVEL */
.home__about {
  text-decoration: none;
  margin: 8px 0 0 8px;
  color: #636363;
}

.navbar {
  z-index: 100;
  position: fixed;
  height: 40px;
  top: 0px;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #fff;
  border-bottom: 1px solid #cccccc;
  padding: 0 8px 0 16px;
}

.main {
  display: flex;
  flex-direction: column;
  margin: 0px 0 80px 0;
  align-items: center;
}

.main__public-page {
  margin-top: 60px;
}

/* app description */
.app-description {
  text-align: center;
  margin: 32px 16px;
  padding: 16px;
}

.app-description__section {
  margin-top: 60px;
  background-color: #f89292;
  text-align: center;
  min-height: 100vh;
  width: 100vw;
  padding: 16px;
  box-shadow: 1px 1px 16px 16px #f89292;
}

.promo-image {
  margin-bottom: 40px;
}

.promo-title {
  color: #fff;
  font-weight: bold;
  font-size: 32px;
  margin-bottom: 0;
}
/* __________ */

.footer {
  position: fixed;
  display: flex;
  align-items: center;
  padding: 0 16px;
  bottom: 0px;
  width: 100vw;
  height: 40px;
  background-color: #fff;
  border-top: 1px solid #ccc;
}

.user-image {
  border-radius: 99px;
  margin-right: 8px;
}

.account-components {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 80px;
}

.greeting {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin-top: 40px;
}

.logo {
  border-radius: 99px;
  margin-top: 4px;
}

.logo:hover {
  cursor: pointer;
  box-shadow: 0px 0px 2px 1px #f4c6c6;
  background-color: #f4c6c6;
}

/*______________________________________ BUTTONS */
.absolute-button-top-right {
  position: absolute;
  right: 0px;
  top: 8px;
}

.absolute-button-top-right--second {
  position: absolute;
  right: 70px;
  top: 8px;
}

.absolute-button-bottom-left {
  position: absolute;
  bottom: 8px;
}

.absolute-button-bottom-left--second {
  position: absolute;
  bottom: 8px;
  left: 80px;
}

.absolute-button-bottom-right {
  position: absolute;
  bottom: 8px;
  right: 8px;
}

.absolute-button-bottom-right--second {
  position: absolute;
  bottom: 8px;
  right: 80px;
}

.absolute-top-left {
  position: absolute;
}

.action-button {
  background-color: #ef4b4c;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  height: 24px;
  min-width: 64px;
  max-width: 100px;
  min-width: 60px;
  margin-right: 8px;
  transition: 0.2s ease-in-out;
}

.action-button:hover {
  cursor: pointer;
  background-color: #f66161;
  transition: 0.2s ease-in-out;
}

.action-button:active {
  cursor: pointer;
  background-color: #f89292;
}

.navbar__button {
  background-color: #ffffff;
  border: 1px solid #cccccc;
  border-radius: 4px;
  height: 24px;
  max-width: 100px;
  margin-right: 8px;
}
.navbar__button:hover {
  cursor: pointer;
  background-color: #f1f1f1;
  transition: 0.2s ease-in-out;
}
.navbar__button:active {
  background-color: #f5f5f5;
  transition: 0.2s ease-in-out;
}

.navbar__button--disabled {
  background-color: #ffffff;
  border: 1px solid #cccccc;
  color: #cccccc;
  border-radius: 4px;
  height: 24px;
  width: 64px;
  margin-right: 8px;
}

.account-buttons {
  z-index: 100;
  position: fixed;
  display: grid;
  grid-template: 'a b c d';
  width: 100vw;
  bottom: 0px;
  height: 48px;
  align-items: center;
  background-color: #fff;
}
.page-button {
  font-size: 16px;
  background-color: #fff;
  border: none;
  border-top: solid 1px #cccccc;
  color: #ef4b4c;
  height: 48px;
  transition: 0.2s;
}
.page-button:hover {
  cursor: pointer;
  font-size: 18px;
  transition: 0.2s;
}
.page-button--selected {
  font-size: 16px;
  background-color: #fff;
  border: none;
  border-top: solid 1px #cccccc;
  color: #ef4b4c;
  height: 48px;
  font-weight: bold;
  transition: 0.2s;
}

.page-button--selected:hover {
  font-size: 18px;
  transition: 0.2s;
}

.toggle-button {
  background-color: #ffffff;
  border: none;
  border-radius: 4px;
  margin-left: 0px;
  height: 24px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: 0.2s ease-in-out;
}

.toggle-button:hover {
  cursor: pointer;
  background-color: #f1f1f1;
  transition: 0.2s ease-in-out;
}

.toggle-description-button {
  display: flex;
  justify-content: space-between;
}

.toggle-description-button:hover {
  cursor: pointer;
}

.delete-guest {
  margin: 0;
  padding: 0 4px;
  color: #f89292;
  border-radius: 4px;
  transition: 0.2s;
}

.delete-guest:hover {
  color: #ef4b4c;
  transition: 0.2s;
}

/*______________________________________ FORM */
pre {
  margin: 4px;
}

b {
  margin: 0 8px 0 0;
}

.form__offerings {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
}

.form__offerings-alone {
  display: flex;
  align-items: center;
  margin: 8px 0;
}
/* ... */

